--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "emailjs": "^3.8.0",
+    "emailjs-com": "^3.2.0",
     "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
